secret for the masses

--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
+<!-- file:///C:/Users/w/Documents/GitHub/RafaelaChaffilla.github.io/index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="pt">
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Aos 21 do TIAGOOOOO</title>  
+      <link rel="icon" href="img/icon.jpg">
+      <link rel="stylesheet" type="text/css" href="css/base.css" />
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+   </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div id="header_div">
+        <div class="container">
+            <br/>
+            <h1>PARABÉNS TIAGO!!!!</h1>
+            <p>Das tuas amigas preferidas, Rafa e Sónia!</p>
+        </div>
+    </div>
+    <div id="second_div">
+        <div class="container box">
+            <h1>PARABÉNS TIAGO!!!!</h1>
+            <p>Chegou o dia tão especial em que fazes anos. 21, portanto idade legal para comprar alcóol nos estados unidos. Também é sinal de que estamos a ficar velhos e com o pé para a cova <3. </p>
+        </div>
+    </div>
 </body>
 </html>
