--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Aos 21 do TIAGOOOOO</title>  
-      <link rel="icon" href="img/icon.jpg">
-      <link rel="stylesheet" type="text/css" href="css/base.css" />
+      <link rel="icon" href="./img/icon.jpg">
+      <link rel="stylesheet" type="text/css" href="./css/base.css" />
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
    </head>
 <body>
