qual é a tua reação?

--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
       <link rel="icon" href="./img/icon.jpg">
       <link rel="stylesheet" type="text/css" href="./css/base.css" />
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
    </head>
 <body>
     <div id="header_div">
         <div class="container">
-            <br/>
-            <h1>PARABÉNS TIAGO!!!!</h1>
-            <p>Das tuas amigas preferidas, Rafa e Sónia!</p>
+            <div class="header_title">
+                <br/>
+                <h1>PARABÉNS TIAGO!!!!</h1>
+                <p>Das tuas amigas preferidas, Rafa e Sónia!</p>
+            </div>
+            <div id="rct-icns" class="reaction-icons">
+                <p>_Qual é a tua reação?_</p>
+                <a href="#second_div" ><i style="color: green;" class="fa-solid fa-face-smile"></i></a>
+                <a href="./fake.html" ><i style="color: red;" class="fa-solid fa-face-frown"></i></a>
+            </div>
         </div>
     </div>
     <div id="second_div">
