this is all i have

--- a/fake.html
+++ b/fake.html
@@ -11,13 +11,10 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
    </head>
 <body class="fk">
-    <div id="header_div">
-        <div class="container">
-            <div class="box">
-                <br/>
-                <h1>FAKEEEEEEEEEEEEEEE</h1>
-                <p>Como podes ver, as tuas amigas preferidas, Rafa e Sónia, estão desiludidas e zangadas por não teres gostado da surpresa.</p>
-            </div>
+    <div id="second_div">
+        <div id="faketext" class="container box">
+            <h1>FAKEEEEEEEEEEEEEEE</h1>
+            <p>Como podes ver, as tuas amigas preferidas, Rafa e Sónia, estão desiludidas e zangadas por não teres gostado da surpresa.</p>
         </div>
     </div>
 </body>
