--- a/fake.html
+++ b/fake.html
@@ -15,6 +15,13 @@
         <div id="faketext" class="container box">
             <h1>FAKEEEEEEEEEEEEEEE</h1>
             <p>Como podes ver, as tuas amigas preferidas, Rafa e Sónia, estão desiludidas e zangadas por não teres gostado da surpresa.</p>
+            <p>Esta é uma ótima oportunidade para repensares nos teus feitos, e:</p>
+            <p> 1º) Pedir mil desculpas às tuas bffs;</p>
+            <p> 2º) Voltar à página inicial e gostar da tua surpresa.</p>
+            <p style="font-size: 10px;">Se vieste aqui ter porque a rafa te disse para ires ou só porque estavas curioso, estás automaticamente perdoado.</p>  
+        </div>
+        <div class="madmadmad">
+            <p>Isto é para reparares bem em como estamos zangadas!</p>
         </div>
     </div>
 </body>
