--- a/index.html
+++ b/index.html
@@ -1,52 +1,133 @@
 <!DOCTYPE html>
 <html lang="pt">
-<!-- file:///C:/Users/w/Documents/GitHub/RafaelaChaffilla.github.io/index.html -->
-   <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Aos 21 do TIAGOOOOO</title>  
-      <link rel="icon" href="./img/icon.jpg">
-      <link rel="stylesheet" type="text/css" href="./css/base.css" />
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-   </head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Who are you?</title>  
+    <link rel="icon" href="./locker.jpg">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+</head>
+
+<style>
+
+    body {
+        background-image: url('./meandthebesties.jpeg');
+        background-attachment: fixed;
+        background-size: contain;
+        color: #333;
+    }
+
+    .box {
+        border-radius: 3px;
+        background: rgba(101, 101, 101, 0.7); margin: auto; padding: 12px;
+    }
+
+    .lightbox {
+        zoom: 1.5;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(10, 10, 10, 0.8);
+        text-align: center;
+        margin: auto;
+
+    }
+
+    div.horizontal {
+        display: flex;
+        justify-content: center;
+        height: 100%;
+    }
+
+    div.vertical {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+    }
+
+    ::-webkit-input-placeholder {
+    color: #955;
+    text-align: center;
+    }
+
+    ::-moz-placeholder {
+    color: #955;
+    text-align: center;
+    }
+
+    :-ms-input-placeholder {
+    color: #955;
+    text-align: center;
+    }
+
+</style>
+
 <body>
-    <div id="header_div">
-        <div class="container">
-            <div class="header_title">
-                <br/>
-                <h1>PARABÉNS TIAGO!!!!</h1>
-                <p>Das tuas amigas preferidas, Rafa e Sónia!</p>
-            </div>
-            <div id="rct-icns" class="reaction-icons">
-                <p>_Qual é a tua reação?_</p>
-                <a href="#second_div" ><i style="color: green;" class="fa-solid fa-face-smile"></i></a>
-                <a href="./fake.html" ><i style="color: red;" class="fa-solid fa-face-frown"></i></a>
-            </div>
-        </div>
-    </div>
-    <div id="second_div">
-        <div class="container box">
-            <h1>PARABÉNS TIAGO!!!!</h1>
-            <p>Chegou o dia tão especial em que fazes anos. 21, portanto idade legal para comprar álcool nos 
-            estados unidos. Também é sinal de que estamos a ficar velhos e com o pé para a cova <3. </p>
-            <p>Brincadeiras à parte, desejo-te um dia feliz (parte do dia vai ser top pq vais passar connosco 
-            obviamente) e que esta surpresa te tenha melhorado o dia ainda mais. Afinal, nem toda a gente 
-            pode dizer que tem um site dedicado só a si.</p>
-            <p>E (not to get all emotional mas) espero que para além deste aniversário, continuemos a celebrar 
-            muitos mais juntos, apesar de termos tido um periodo de não contacto, mas no final de contas, um
-            bocadinho de drama é sempre necessário. Por exemplo, não ficaste a saber mas a Sónia mentiu-me 
-            sobre a nota que ela tirou no exame de história e eu fiquei tão ofendida que ia deixar de falar com 
-            ela. Só que como não tinha mais amigos, achei tenso ficar sem a única que tinha na altura, então 
-            perdoei e agora aqui estamos sólidas, continuando a chatear uma à outra e agora hopefully tbm te 
-            chateamos a ti :). Isto para dizer que apesar de tudo, esperamos continuar aqui uns para os outros 
-            para tudo o que for necessário, e podes contar sempre comigo (e imagino que com a Sónia tbm) para 
-            tudo o que precisares, desabafar, chatear, etc. Só nada que envolva despender dinheiro pq estamos 
-            todos pobres :(.</p>
-            <p>Enfim, acabo aqui o meu testinho de aniversário, que é tradição, porque se não fica feio no site 
-            (não é que ele esteja muito bonito, mas é lidar) e se chorares um bocadinho de emoção, é totalmente 
-            compreensível hahaha. Kisses da tua amiga webdever, Rafa :)!</p>
-        </div>
-    </div>
+
+	<div id="loginbox" class="lightbox" >
+		<div class="horizontal">
+			<div class="vertical">
+				<div class="box">
+					<input style="margin: 16px; text-align: center;" id="password" type="password" placeholder="password?" /> <br />
+					<button id="loginbutton" type="button">Enter</button>
+					<p id="wrongPassword" style="display: none">Não és parte dos besties, get out!!!</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+
+	<script type="text/javascript" src="https://rawcdn.githack.com/chrisveness/crypto/7067ee62f18c76dd4a9d372a00e647205460b62b/sha1.js"></script>
+
+	<script type="text/javascript">
+	"use strict";
+
+
+	function loadPage(pwd) {
+
+		var hash= pwd;
+		hash = Sha1.hash(pwd);
+		var url= hash + "/real.html";
+        console.log(url);
+
+		$.ajax({
+			url : url,
+			dataType : "html",
+			success : function(data) {
+
+				window.location= url;
+
+			},
+			error : function(xhr, ajaxOptions, thrownError) {
+
+
+				parent.location.hash= hash;
+
+				//$("#wrongPassword").show();
+				$("#password").attr("placeholder","errou, chate!!!!");
+				$("#password").val("");
+			}
+		});
+	}
+
+
+	$("#loginbutton").on("click", function() {
+		loadPage($("#password").val());
+	});
+	$("#password").keypress(function(e) {
+		if (e.which == 13) {
+
+			loadPage($("#password").val());
+		}
+	});
+	$("#password").focus();
+
+	</script>
+
 </body>
 </html>
