mensagem da sónia

--- a/bc92ff4964820689c3477753b795f8734ca52300/real.html
+++ b/bc92ff4964820689c3477753b795f8734ca52300/real.html
@@ -26,26 +26,37 @@
         </div>
     </div>
     <div id="second_div">
-        <div class="container box">
-            <h1>PARABÉNS TIAGO!!!!</h1>
-            <p>Chegou o dia tão especial em que fazes anos. 21, portanto idade legal para comprar álcool nos 
-            estados unidos. Também é sinal de que estamos a ficar velhos e com o pé para a cova <3. </p>
-            <p>Brincadeiras à parte, desejo-te um dia feliz (parte do dia vai ser top pq vais passar connosco 
-            obviamente) e que esta surpresa te tenha melhorado o dia ainda mais. Afinal, nem toda a gente 
-            pode dizer que tem um site dedicado só a si.</p>
-            <p>E (not to get all emotional mas) espero que para além deste aniversário, continuemos a celebrar 
-            muitos mais juntos, apesar de termos tido um periodo de não contacto, mas no final de contas, um
-            bocadinho de drama é sempre necessário. Por exemplo, não ficaste a saber mas a Sónia mentiu-me 
-            sobre a nota que ela tirou no exame de história e eu fiquei tão ofendida que ia deixar de falar com 
-            ela. Só que como não tinha mais amigos, achei tenso ficar sem a única que tinha na altura, então 
-            perdoei e agora aqui estamos sólidas, continuando a chatear uma à outra e agora hopefully tbm te 
-            chateamos a ti :). Isto para dizer que apesar de tudo, esperamos continuar aqui uns para os outros 
-            para tudo o que for necessário, e podes contar sempre comigo (e imagino que com a Sónia tbm) para 
-            tudo o que precisares, desabafar, chatear, etc. Só nada que envolva despender dinheiro pq estamos 
-            todos pobres :(.</p>
-            <p>Enfim, acabo aqui o meu testinho de aniversário, que é tradição, porque se não fica feio no site 
-            (não é que ele esteja muito bonito, mas é lidar) e se chorares um bocadinho de emoção, é totalmente 
-            compreensível hahaha. Kisses da tua amiga webdever, Rafa :)!</p>
+        <div class="container"> 
+            <div class="header_title">
+                <h1>PARABÉNS TIAGO!!!!</h1>
+            </div>
+            <div class="box">
+                <h2>Mensagem da Rafa:</h2>
+                <p>Chegou o dia tão especial em que fazes anos. 21, portanto idade legal para comprar álcool nos 
+                estados unidos. Também é sinal de que estamos a ficar velhos e com o pé para a cova <3.
+                Brincadeiras à parte, desejo-te um dia feliz (parte do dia vai ser top pq vais passar connosco 
+                obviamente) e que esta surpresa te tenha melhorado o dia ainda mais. Afinal, nem toda a gente 
+                pode dizer que tem um site dedicado só a si.</p>
+                <p>E (not to get all emotional mas) espero que para além deste aniversário, continuemos a celebrar 
+                muitos mais juntos, apesar de termos tido um periodo de não contacto, mas no final de contas, um
+                bocadinho de drama é sempre necessário. 
+                E apesar de tudo, espero que continuemos aqui uns para os outros, para tudo o que for necessário, e 
+                podes contar sempre comigo (e imagino que com a Sónia tbm) para tudo o que precisares, desabafar, chatear,
+                etc. Só nada que envolva despender dinheiro pq estamos todos pobres :(.</p>
+                <p>Enfim, acabo aqui o meu testinho de aniversário, que é tradição, porque se não fica feio no site 
+                (não é que ele esteja muito bonito, mas é lidar) e se chorares um bocadinho de emoção, é totalmente 
+                compreensível hahaha. Kisses da tua amiga webdever, Rafa :)!</p>
+            </div>
+            <div class="box"> 
+                <h2>Mensagem da Sónia:</h2>
+                <p>Tiago, parabéns! Pensavas que nos esqueciamos do teu não-aniversário? Pena. Porque nos lembramos. 
+                E porque te adoramos. Um daqueles que percebe melhor de PCs do grupo, a Rafa, decidiu fazer um site para 
+                ti.</p>
+                <p>Olha vou te dizer uma coisa e eu vou ouvir😅 Brincadeira, vais ouvir, neste caso ler. A não ser que 
+                leias em alta voz. Tivemos tantas saudades tuas. Eu quase morri. A Rafa esteve lá, mas faltava sem algo.
+                Que eras tu na verdade. Mas agora estás no grupo. E espero que seja por muitos anos. Até sermos velhinhos. 
+                E como já temos os dois carta vamos passear muito. E vamos visitar a chata da Rafa. Chata mas adorável. </p>
+            </div> 
         </div>
     </div>
 </body>
