erros na finlandia

--- a/bc92ff4964820689c3477753b795f8734ca52300/real.html
+++ b/bc92ff4964820689c3477753b795f8734ca52300/real.html
@@ -53,7 +53,7 @@
                 E porque te adoramos. Um daqueles que percebe melhor de PCs do grupo, a Rafa, decidiu fazer um site para 
                 ti.</p>
                 <p>Olha vou te dizer uma coisa e eu vou ouvir😅 Brincadeira, vais ouvir, neste caso ler. A não ser que 
-                leias em alta voz. Tivemos tantas saudades tuas. Eu quase morri. A Rafa esteve lá, mas faltava sem algo.
+                leias em alta voz. Tivemos tantas saudades tuas. Eu quase morri. A Rafa esteve lá, mas faltava sempre algo.
                 Que eras tu na verdade. Mas agora estás no grupo. E espero que seja por muitos anos. Até sermos velhinhos. 
                 E como já temos os dois carta vamos passear muito. E vamos visitar a chata da Rafa. Chata mas adorável. </p>
             </div> 
