--- a/bc92ff4964820689c3477753b795f8734ca52300/fake.html
+++ b/bc92ff4964820689c3477753b795f8734ca52300/fake.html
@@ -12,13 +12,15 @@
    </head>
 <body class="fk">
     <div id="second_div">
-        <div id="faketext" class="container box">
-            <h1>FAKEEEEEEEEEEEEEEE</h1>
-            <p>Como podes ver, as tuas amigas preferidas, Rafa e Sónia, estão desiludidas e zangadas por não teres gostado da surpresa.</p>
-            <p>Esta é uma ótima oportunidade para repensares nos teus feitos, e:</p>
-            <p> 1º) Pedir mil desculpas às tuas bffs;</p>
-            <p> 2º) Voltar à página inicial e gostar da tua surpresa.</p>
-            <p style="font-size: 10px;">Se vieste aqui ter porque a rafa te disse para ires ou só porque estavas curioso, estás automaticamente perdoado.</p>  
+        <div id="faketext" class="container">
+            <div class="box">
+                <h1>FAKEEEEEEEEEEEEEEE</h1>
+                <p>Como podes ver, as tuas amigas preferidas, Rafa e Sónia, estão desiludidas e zangadas por não teres gostado da surpresa.</p>
+                <p>Esta é uma ótima oportunidade para repensares nos teus feitos, e:</p>
+                <p> 1º) Pedir mil desculpas às tuas bffs;</p>
+                <p> 2º) Voltar à página inicial e gostar da tua surpresa.</p>
+                <p style="font-size: 10px;">Se vieste aqui ter porque a rafa te disse para ires ou só porque estavas curioso, estás automaticamente perdoado.</p>  
+            </div>
         </div>
         <div class="madmadmad">
             <p>Isto é para reparares bem em como estamos zangadas!</p>
