--- a/bc92ff4964820689c3477753b795f8734ca52300/real.html
+++ b/bc92ff4964820689c3477753b795f8734ca52300/real.html
@@ -12,11 +12,12 @@
    </head>
 <body>
     <div id="header_div">
-        <div class="container">
+        <div class="container">      
             <div class="header_title">
-                <br/>
-                <h1>PARABÉNS TIAGO!!!!</h1>
-                <p>Das tuas amigas preferidas, Rafa e Sónia!</p>
+                <div class="center-bix"> 
+                    <h1>PARABÉNS TIAGO!!!!</h1>
+                    <p>Das tuas amigas preferidas, Rafa e Sónia!</p>
+                </div>
             </div>
             <div id="rct-icns" class="reaction-icons">
                 <p>_Qual é a tua reação?_</p>
@@ -28,7 +29,7 @@
     <div id="second_div">
         <div class="container"> 
             <div class="header_title">
-                <h1>PARABÉNS TIAGO!!!!</h1>
+                <h2>PARABÉNS TIAGO!!!!</h2>
             </div>
             <div class="box">
                 <h2>Mensagem da Rafa:</h2>
@@ -43,7 +44,7 @@
                 E apesar de tudo, espero que continuemos aqui uns para os outros, para tudo o que for necessário, e 
                 podes contar sempre comigo (e imagino que com a Sónia tbm) para tudo o que precisares, desabafar, chatear,
                 etc. Só nada que envolva despender dinheiro pq estamos todos pobres :(.</p>
-                <p>Enfim, acabo aqui o meu testinho de aniversário, que é tradição, porque se não fica feio no site 
+                <p>Enfim, acabo aqui o meu textinho de aniversário, que é tradição, porque se não fica feio no site 
                 (não é que ele esteja muito bonito, mas é lidar) e se chorares um bocadinho de emoção, é totalmente 
                 compreensível hahaha. Kisses da tua amiga webdever, Rafa :)!</p>
             </div>
